--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "del": "^5.1.0",
+    "eslint": "^7.30.0",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.1",
