--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-node": "^11.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
@@ -32,6 +34,8 @@
   "devDependencies": {
     "del": "^5.1.0",
     "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.1",
@@ -39,5 +43,14 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-stream": "^5.2.1"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
+  },
+  "engines": {
+    "node": "8"
   }
 }
