--- a/api/package.json
+++ b/api/package.json
@@ -32,6 +32,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.15.8",
     "del": "^5.1.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
