--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/bbachi/react-nodejs-example#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "eslint-config-standard": "^16.0.3",
