--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.2"
