--- a/api/package.json
+++ b/api/package.json
@@ -27,10 +27,12 @@
     "eslint-plugin-node": "^11.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.4",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3",
+    "nodemailer": "^6.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
