--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 DB = 'mongodb://127.0.0.1:27017/users',
 HOST = 'localhost'
-USER = 'baatcheet735@gmail.com'
-PASS = 'Baatcheet@735'
+USER = 'baatcheet77@gmail.com'
+PASS = 'Bobthenoddy@8127'
 SERVICE = 'gmail'
 BASE_URL = 'http://localhost:8000/api/user'
