--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.bundle.js",
     "build": "webpack",
-    "dev": "nodemon ./server.js localhost 3090"
+    "dev": "nodemon ./server.js localhost 3090",
+    "dev_socket": "nodemon ./index.js localhost 3080"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.7.0",
+    "socket.io": "^4.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
