--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
+    "babel-preset-stage-0": "^6.24.1",
     "del": "^5.1.0",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
