--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.8",
+    "@heroku/buildpack-registry": "^1.0.1",
     "babel-preset-stage-0": "^6.24.1",
     "del": "^5.1.0",
     "eslint": "^7.30.0",
@@ -47,8 +48,10 @@
     "fancy-log": "^1.3.3",
     "gulp": "^4.0.2",
     "gulp-zip": "^5.0.1",
+    "heroku": "^7.59.2",
     "nodemon": "^2.0.7",
     "ts-loader": "^9.2.6",
+    "valid-url": "^1.0.9",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-stream": "^7.0.0"
@@ -60,6 +63,6 @@
     }
   },
   "engines": {
-    "node": "8"
+    "node": "14.x"
   }
 }
