--- a/client/src/config.json
+++ b/client/src/config.json
@@ -1,5 +1,5 @@
 {
-    "baseUrl":"http://localhost:8000/api/user",
+    "baseUrl":" https://baatcheet-77.herokuapp.com/api/user",
     "createUser":"/",
     "loginUser":"/login",
     "updateUser":"/update",
