--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,9 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          sed -i 's/http:\/\/localhost:8000/https:\/\/baatcheet-77.herokuapp.com/g' client/src/config.json
+          sed -i 's/ws:\/\/127.0.0.1:8000/wss:\/\/baatcheet-77.herokuapp.com/g' client/src/config.json
+          cat client/src/config.json
+          git add .
+          git commit -m "url changed"
+          git push
