--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
+          git config --global user.email "kushalbhatia169@gmail.com"
+          git config --global user.name "kushalbhatia169"
           sed -i 's/http:\/\/localhost:8000/https:\/\/baatcheet-77.herokuapp.com/g' client/src/config.json
           sed -i 's/ws:\/\/127.0.0.1:8000/wss:\/\/baatcheet-77.herokuapp.com/g' client/src/config.json
           cat client/src/config.json
