--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DB = 'mongodb://127.0.0.1:27017/users',
-HOST = 'localhost'
-USER = 'baatcheet77@gmail.com'
-PASS = 'Bobthenoddy@8127'
-DBUser = 'kushal'
-DBPassword = 'Kush8127'
-DBName = 'baatcheet'
-SERVICE = 'gmail'
-BASE_URL = 'http://localhost:8000/api/user'
+DB_local = 'mongodb://127.0.0.1:27017/users',
+HOST_local = 'localhost'
+USER_local = 'baatcheet77@gmail.com'
+PASS_local = 'Bobthenoddy@8127'
+DBUser_local = 'kushal'
+DBPassword_local = 'Kush8127'
+DBName_local = 'baatcheet'
+SERVICE_local = 'gmail'
+BASE_URL_local = 'http://localhost:8000/api/user'
 SKIP_PREFLIGHT_CHECK=true 
