--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
     "firebaseui": "^6.0.0",
     "material-ui-phone-number": "^3.0.0",
     "moment": "^2.29.1",
-    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
@@ -30,6 +29,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.50.0",
     "socket.io-client": "^4.3.2",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
