--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.12.9",
     "mongoose-unique-validator": "^2.0.3",
     "nodemailer": "^6.7.0",
+    "saslprep": "^1.0.3",
     "socket.io": "^4.1.2",
     "uuid": "^8.3.2"
   },
