--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.2",
     "@mui/styles": "^5.0.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -26,9 +27,12 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.0",
     "react-hook-form": "^7.18.0",
+    "react-redux": "^8.0.1",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.50.0",
     "socket.io-client": "^4.3.2",
     "typescript": "^4.5.2",
